--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
 
             <com.vasanthsadhasivan.dev.quadcopterwifi.Views.VerticalSeekBar
                 android:id="@+id/aux"
+                android:max="180"
                 style="@style/Widget.AppCompat.SeekBar.Discrete"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"/>
