--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Aux"
+                android:text="c5"
                 android:textAlignment="center" />
 
             <com.vasanthsadhasivan.dev.quadcopterwifi.Views.VerticalSeekBar
-                android:id="@+id/aux"
+                android:id="@+id/c5"
                 android:max="180"
                 style="@style/Widget.AppCompat.SeekBar.Discrete"
                 android:layout_width="wrap_content"
